--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,18 @@
 th {
   text-align: center;
 }
+
+.btn {
+  color: rgb(255, 255, 255);
+  border-color: transparent;
+  background-color: rgb(255, 80, 0);
+}
+
+h2 {
+  color: #ff5000;
+  text-transform: uppercase;
+}
+
+.alert {
+  color: #498fab;
+}
